2000-10-12  Per Bothner  <per@bothner.com>

	* numbers.scm:  Add (new-style) type specificiers.
	Replace some ((primitive-virtual-method ...)) by (invoke ...).
	(floor, ceiling, truncate, round, arithmetic-shift):  New procedures.

2000-06-19  Per Bothner  <per@bothner.com>

	* characters.scm (char=?, char<?, char>?, char<=?, char>=?,
	char-ci=?, char-ci<?, char-ci>?, char-ci<=?, char-ci>=?):
	New procedures.

2000-06-18  Per Bothner  <per@bothner.com>

	* misc.scm (make-procedure):  Call make, not make$.

2000-06-09  Per Bothner  <per@bothner.com>

	* quantities.scm:  Removed, as define-unit now has its own class.
	* Makefile.am (java_SCM):  Update accordingly.

	* misc.scm (make-procedure):  New procedures.
	(procedure-property, set-procedure-property!):  New procedures.
	* syntax.scm (define-procedure):  New syntax.

2000-05-28  Per Bothner  <per@bothner.com>

	* trace.scm (%do-trace):  Fix typo.

	* Makefile.am (JAVACFLAGS):  Add --module-static flag.

	* trace.scm (%do-trace):  Incorrect primitive-static-method replaced
	by invoke-static.

2000-04-17  Per Bothner  <per@bothner.com>

	* strings.scm: Use invoke/invoke-static more.
	Generalize many procedures to work on <abstract-string>.

2000-04-13  Per Bothner  <per@bothner.com>

	* reflection.scm (record-type-name):  Use Scheme's demangleName.
	Use invoke-static and invoke instead of primitive-virtual-method.

2000-03-12  Per Bothner  <per@bothner.com>

	* ports.scm (write, display, write-char):  Added procedures.

2000-02-12  Per Bothner  <per@bothner.com>

	* syntax.scm (this):  New macro.

2000-02-01  Per Bothner  <per@bothner.com>

	* misc.scm (null-environment):  Update field name used.

	* numbers.scm (logtest):  Add missing arguments.
	
	* std_syntax.scm (and):  Re-structure to make it easier to generate
	better code (by leveraging off ConditionalTarget).

2000-01-24  Per Bothner  <per@bothner.com>

	* numbers.scm (lognot, logop, logbit?, bit-extract, logtest, logcount,