@@ -53,9 +53,6 @@
        ((primitive-constructor <kawa.standard.Scheme> ())))))
 |#
 
-(define (make-procedure #!rest (args :: <Object[]>))
-  (invoke-static <gnu.expr.GenericProc> 'make args))
-
 (define (procedure-property (proc :: <procedure>) key #!optional default)
   (invoke proc 'getProperty key default))
 
