@@ -9,7 +9,7 @@
 (define-syntax define-procedure
   (syntax-rules ()
 		((define-procedure name . args)
-		 (define-constant name (make-procedure name: name . args)))))
+		 (define-constant name (make-procedure name: 'name . args)))))
 
 (define (%defmacro form rule)
   (rule (car (form 'form))))
