@@ -1,3 +1,13 @@
+2000-10-13  Per Bothner  <per@bothner.com>
+
+	* misc.scm (make-procedure):  Replaced by kawa.standard.MakeProcedure.
+	* syntax.scm (define-procedure):  Quote the name.
+	* lists.scm, numbers.scm:  Make module static.
+	* lists.scm (car, cdr):  New procedures.
+	* emacs.scm:  Removed; subsumed by code in gnu/jemacs.
+	* Makefile.am (java_SCM):  Make syntax.scm before lists.scm, since
+	the latter uses define-procedure.
+
 2000-10-12  Per Bothner  <per@bothner.com>
 
 	* numbers.scm:  Add (new-style) type specificiers.
